(1) checkActivity can gain data from server include rgbs, features, results; (2) picture can not gain correctly, perhaps the gson wrap could not wrap the picture object because the type in app is not complaint to Server.

--- a/app/src/main/res/layout/activity_picture_check.xml
+++ b/app/src/main/res/layout/activity_picture_check.xml
@@ -127,7 +127,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="显示检测结果"
-        android:onClick="onShowPictureCheckResult"/>
+        android:onClick="onShowResult"/>
     <Button
         android:id="@+id/picture_check_upload_all_bitmap_button"
         android:layout_width="match_parent"
