--- a/app/src/main/res/layout/content_picture_check.xml
+++ b/app/src/main/res/layout/content_picture_check.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activity.PictureCheckActivity"
+    tools:context=".activity.CheckActivity"
     tools:showIn="@layout/activity_picture_check">
 </android.support.constraint.ConstraintLayout>
